--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tools For Making: StyrofoamCut</title>
-    <link rel="stylesheet" href="glassbend.css">
+    <link rel="stylesheet" href="styrofoamcut.css">
   </head>
   <body>
     <div class="header">
