--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
         <ul class="styro">
           <li><span class="mgr1">no.1</span><span class="mgr2">まっすぐ切る</span><a href="http://bt-shop.jp/?pid=5962635">固定式スタイロカッター</a></li>
-          <li><span class="mgr1">no.1</span><span class="mgr2">自由に切る</span><a href="https://kurashi-no.jp/I0027816">手持ち式スタイロカッター</a></li>
-          <li><span class="mgr1">no.2</span><span class="mgr2">3次元曲面（線職面）をつくる</span><a href="http://www.matterdesignstudio.com/periscope">Foam Tower (Matter Design, 2010)</a></li>
+          <li><span class="mgr1">no.2</span><span class="mgr2">自由に切る</span><a href="https://kurashi-no.jp/I0027816">手持ち式スタイロカッター</a></li>
+          <li><span class="mgr1">no.3</span><span class="mgr2">3次元曲面（線職面）をつくる</span><a href="https://ddu-research.com/communication-landscapes/">Communication Landscapes(DDU, 2017)</a></li>
+          <li><span class="mgr1">no.4</span><span class="mgr2">3次元曲面（線職面）をつくる</span><a href="http://www.matterdesignstudio.com/periscope">Foam Tower (Matter Design, 2010)</a></li>
         </ul>
       </div>
     </div>
