--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="main">
-      <div class="title_styro">
+      <div class="title_styrofoam">
         <h2>スタイロフォームを切る</h2>
       </div>
       <div class="content">
